<resources>
    <string name="app_name">Gear UP VR</string>
    <string name="activity_user_type_hint">I am a…</string>
    <string name="background_image_for_user_type_selection">Background image for user type selection</string>
    <string name="splash_image">splash image</string>
    <string name="high_school_hint">I attend high school at…</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="under_development">under development</string>
    <string name="clear_text_button">clear text button</string>
    <string name="done_button">Done button</string>
    <string name="dashboard_title">Home</string>
    <string name="thumbnail">thumbnail</string>
    <string name="more_nav_title">More</string>
    <string name="navigation_icon">navigation icon</string>
    <string name="disclosure_indicator">disclosure indicator</string>
    <string name="back_button">back button</string>
    <string name="generic_error_message">Unable to display the information at this time. Please try after sometimes.</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="college_logo">college logo</string>
    <string name="google_maps_key">AIzaSyC1khp-LcosAjXiML2kKF4-ogBxOqUFP2w</string>
    <string name="tag_follow_us_on">Follow us on:</string>
    <string name="des_fb_icon">Fb Icon</string>
    <string name="des_twitter_icon">twitter_icon</string>
    <string name="des_linkedin_icon">linkedin icon</string>
    <string name="des_web_icon">web icons</string>
    <string name="des_email_icon">email icon</string>
    <string name="navigation_button_for_the_next_screen">Navigation Button For The Next Screen</string>
    <string name="url_parse_error">Error While Fetching Data Please Try Again After Sometimes Or Check Other Entries</string>
    <string name="play_button">Play button</string>
    <string name="ok_button">OK</string>


    <string name="title_activity_video_player">VideoPlayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="permission_warning">This app will not run without permission to read from storage. Click to enable permission.</string>
    <string name="play_label">Play video</string>
    <string name="pause_label">Pause video</string>
    <string name="exit_vr_label">Exit VR mode</string>
    <string name="enter_vr_label">VR Button</string>
    <string name="vr_video_compatibility_error">The device does not support VR Video. Please contact support team reeseinnovate@gmail.com.</string>
    <string name="tag_filter_by">Filter by</string>
    <string name="radio_tag_in_state">In-state</string>
    <string name="radio_tag_out_of_state">Out-of-state</string>
    <string name="dec_close_button">Close Button</string>
    <string name="tag_sat_score">SAT Score</string>
    <string name="tag_title">Title</string>
    <string name="tag_act_score">ACT Score</string>
    <string name="tag_majors">Majors</string>
    <string name="tag_0_selected">0 Selected</string>
    <string name="tag_student_body_size">Students body size</string>
    <string name="desc_major_select_icon">Major Select Icon</string>
    <string name="less_5000"><![CDATA[< 5000]]></string>
    <string name="between_5000_10000">5000–10000</string>
    <string name="between_10000_15000">10000–15000</string>
    <string name="greater_15000"><![CDATA[15000<]]></string>
    <string name="tag_cost_per_year">Cost per year</string>
    <string name="tag_apply_filters">Apply filters</string>
    <string name="tag_clear_all">Clear All</string>
    <string name="tag_search_major">Search Major</string>
    <string name="tag_back_button">Back Button</string>
    <string name="tag_done">Done</string>
    <string name="tag_reset">Reset</string>
    <string name="tag_major_place_holder">Major Place Holder</string>
    <string name="no_majors_to_show">No Majors To Show</string>
    <string name="tag_selected_placeholder">0 Selected</string>
    <string name="tag_selected">%d\u0020Selected</string>
    <string name="tag_search_college">Search College</string>
    <string name="tag_no_item_to_show">No Item To Display</string>
    <string name="desc_filter_icon">Filter Icon</string>
    <string name="desc_search_icon">Search Icon</string>
    <string name="tag_clear">Clear</string>
    <string name="email_not_config">No Email Client</string>
    <string name="title_activity_maps">Map</string>
    <string name="external_link_heading">Going Out ?</string>
    <string name="external_link_message">Open</string>
    <string name="external_browser_tag">Outside The Application</string>
    <string name="in_app_browser_tag">Within The Application</string>
    <string name="cancel_tag">Cancel</string>
    <string name="link_opening_dialog_title">Open</string>
    <string name="alert">Alert</string>

    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="tag_disability">Disability Access</string>

    <string name="title_activity_network_error">NetworkErrorActivity</string>

    <string name="title_activity_app_error">AppErrorActivity</string>
    <string name="tag_error_image">Error Image</string>
    <string name="tag_failed_to_load_the_application">Failed to load the application</string>
    <string name="tag_error_msg_desc">Please contact support team reeseinnovate@gmail.com</string>
    <string name="button_try_again">Try Again</string>
    <string name="error_403">It looks like you may be using an older version of app. Please update the app and retry or contact support team reeseinnovate@gmail.com.</string>
    <string name="error_404">Please contact support team reeseinnovate@gmail.com</string>
    <string name="_instagram_icon">Instagram Icon</string>
    <string name="common_error_msg">There is an error while fetching data. Please retry or contact support team at reeseinnovate@gmail.com</string>

</resources>
