<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.unc.gearupvr.ui.visit_college_nc.VisitCollegeNCViewModel" />


    </data>

    <RelativeLayout
        android:id="@+id/navigation_visit_college_nc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background_color">

        <RelativeLayout
            android:id="@+id/toolbar_layout"
            style="@style/TopBarStyle">

            <TextView
                android:id="@+id/nav_title"
                style="@style/TopBarTextStyle"
                android:layout_toStartOf="@id/img_filter"
                android:text="@string/tag_title"
                android:visibility="visible"
                android:layout_alignParentStart="true"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:animateLayoutChanges="true"
                android:elevation="5dp"
                android:visibility="gone"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/nc_college_card_bg"
                app:cardCornerRadius="5dp">

                <EditText
                    android:id="@+id/search_college"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_search_back"
                    android:drawableEnd="@drawable/ic_clear"
                    android:drawablePadding="20dp"
                    android:focusable="true"
                    android:hint="@string/tag_search_college"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/filter_sat_score_color"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="@dimen/search_text_font_size" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/img_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/img_search"
                android:background="@drawable/ic_filter_empty"
                android:contentDescription="@string/desc_filter_icon"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/ic_search"
                android:contentDescription="@string/desc_search_icon"
                android:padding="10dp"
                android:visibility="visible" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/shadowLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_layout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shadow_toggle_button">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textOff="@string/list_view"
                android:textOn="@string/map_view"
                android:textSize="16sp"
                android:thumb="@drawable/switch_thumb"
                app:showText="true"
                app:switchTextAppearance="@style/SwitchTextAppearance" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/list_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shadowLayout"
            android:orientation="vertical" />


    </RelativeLayout>
</layout>
