<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.unc.gearupvr.ui.university_details.UniversityDetailsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/college_detail_page_bg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                tools:ignore="ScrollViewSize">

                <RelativeLayout
                    android:id="@+id/topBar"
                    style="@style/TopBarStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/back_button"
                        style="@style/TopBarBackButton"
                        android:contentDescription="@string/back_button" />

                    <TextView
                        android:id="@+id/title"
                        style="@style/TopBarTextStyle"
                        android:layout_toStartOf="@id/ic_email"
                        android:layout_toEndOf="@id/back_button"
                        android:ellipsize="end"
                        android:lines="2"
                        android:text="@{viewModel.name}" />

                    <ImageView
                        android:id="@+id/ic_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="28.5dp"
                        android:layout_marginEnd="22.5dp"
                        android:background="@drawable/ic_mail"
                        android:contentDescription="@string/des_email_icon"
                        android:visibility="@{viewModel.isEmail ? View.VISIBLE : View.GONE}" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/video_thumb"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/video_placeholder_height"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/dashboard_title"
                    android:scaleType="centerCrop"
                    android:src="@drawable/video_placeholder"
                    android:visibility="@{viewModel.isVideo ? View.VISIBLE : View.GONE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/topBar" />

                <ImageButton
                    android:id="@+id/play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/college_detail_page_play_button_bg"
                    android:contentDescription="@string/play_button"
                    android:src="@drawable/ic_play_circle_outline"
                    android:visibility="@{viewModel.isVideo ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/video_thumb"
                    app:layout_constraintEnd_toEndOf="@+id/video_thumb"
                    app:layout_constraintStart_toStartOf="@+id/video_thumb"
                    app:layout_constraintTop_toTopOf="@+id/video_thumb" />

                <LinearLayout
                    android:id="@+id/social_media_divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/video_thumb">

                    <ImageView
                        android:id="@+id/icon_web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/des_web_icon"
                        android:src="@drawable/ic_web"
                        android:visibility="@{viewModel.isWeb ? View.VISIBLE : View.GONE}" />

                    <ImageView
                        android:id="@+id/icon_fb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/des_fb_icon"
                        android:src="@drawable/ic_fb"
                        android:visibility="@{viewModel.isFB ? View.VISIBLE : View.GONE}" />

                    <ImageView
                        android:id="@+id/icon_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/des_twitter_icon"
                        android:src="@drawable/ic_twitter"
                        android:visibility="@{viewModel.isTwitter ? View.VISIBLE : View.GONE}" />

                    <ImageView
                        android:id="@+id/icon_linkedin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/des_linkedin_icon"
                        android:src="@drawable/ic_linkedin"
                        android:visibility="@{viewModel.isLinkedIn ? View.VISIBLE : View.GONE}" />

                    <ImageView
                        android:id="@+id/icon_instagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/_instagram_icon"
                        android:src="@drawable/instagram"
                        android:visibility="@{viewModel.isInstagram() ? View.VISIBLE : View.GONE}" />


                </LinearLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="20dp"
                    android:enabled="false"
                    android:visibility="@{viewModel.isTags ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/social_media_divider"
                    app:singleSelection="true" />

                <WebView
                    android:id="@+id/web_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chip_group" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_send_sms"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/fab_border"
            android:elevation="10dp"
            android:scaleType="fitXY"
            android:visibility="@{viewModel.isPhone() ? View.VISIBLE : View.GONE,default=gone}"
            app:backgroundTint="@color/university_details_page_fab"
            app:borderWidth="2dp"
            app:elevation="10dp"
            app:fabCustomSize="50dp"
            app:fabSize="normal"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_sms" />

        <include

            android:id="@+id/indicator_view"
            layout="@layout/indicator_view" />

    </RelativeLayout>
</layout>
