<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenterViewModel"
            type="com.unc.gearupvr.ui.user_details.UserDetailsViewModel" />

        <variable
            name="viewModel"
            type="com.unc.gearupvr.ui.user_details.highSchool.HighSchoolViewModel" />

        <variable
            name="selectedSchoolUID"
            type="String" />

        <variable
            name="selectedSchoolName"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_high_school"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:contentDescription="@string/background_image_for_user_type_selection"
            android:scaleType="centerCrop"
            android:src="@drawable/select_school_bg" />


        <TextView
            android:id="@+id/high_school_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/user_type_font_family"
            android:text="@string/high_school_hint"
            android:textColor="@color/high_school_heading_color"
            android:textSize="@dimen/high_school_heading_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/suggestion_box"
            android:layout_width="match_parent"
            android:layout_height="@dimen/suggestion_box_height"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/high_school_hint">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/high_school_auto_complete_bg"
                android:dropDownAnchor="@+id/suggestion_box"
                android:dropDownVerticalOffset="10dp"
                android:ems="10"
                android:labelFor="@id/done"
                android:paddingStart="24dp"
                android:paddingEnd="10dp"
                android:popupBackground="@drawable/rounded_corner_white"
                android:singleLine="true"
                android:text="@={viewModel.searchKey}"
                android:hint="@string/high_school_hint"
                android:textColor="@color/high_school_text"
                android:textColorLink="@color/high_school_auto_complete_bg"
                android:textSize="@dimen/auto_complete_text_size" />

            <LinearLayout
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/clear_text_button"
                    android:src="@drawable/ic_clear" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/ic_border_left"
                android:gravity="center"
                android:onClick="@{()->presenterViewModel.saveButtonPressed(selectedSchoolUID, selectedSchoolName)}">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/done_button"
                    android:src="@drawable/ic_arrow_forward" />
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/include2"
            layout="@layout/indicator_view"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-50dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>